# Vesto

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  next.config.js  next.config.ts  package-lock.json  package.json  todo.md  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/bridge/: page.tsx
app/custodian/: page.tsx
app/dashboard/: page.tsx
app/proofs/: page.tsx
app/spv/: page.tsx
app/tokenize/: page.tsx
components/: ConnectButton.tsx  ConnectWalletButton.tsx  FeatureRevealCard.tsx  FooterLanding.tsx  GlowHalo.tsx  NavbarLanding.tsx  NetworkStatus.tsx  VestoLogo.tsx  client-error-logger.tsx  features-section.tsx  final-section.tsx  hero-section.tsx  index.ts  services-section.tsx  stats-section.tsx
components/ui/: button.tsx  toast.tsx
contracts/: Cargo.toml
contracts/src/: lib.rs
lib/: utils.ts
lib/logging/: logger.ts
lib/wallet/: freighter.ts  store.ts
src/components/bridge/: NetworkMismatch.tsx  ProgressModal.tsx  TotalLockedMini.tsx  validators.ts
src/components/cards/: KpiCard.tsx  NetworkStatusCard.tsx  UpcomingPayoutCard.tsx
src/components/charts/: ChartWrapper.tsx  DonutAttestations.tsx  PortfolioBars.tsx  ReserveProjection.tsx
src/components/ui/: Loader.tsx  (+6 more)
src/hooks/: horizon.ts  useAssetSupply.ts  useAttestations.ts  useBridge.ts  useDashboardData.ts  useNetworkHealth.ts  useReserveProofs.ts  useSpv.ts  useStoredProofs.ts  useTokenizationRequests.ts  useWallet.ts
src/lib/: featuresData.ts  mockData.ts
src/shims/: signing-browser.js  stellar-sdk.ts
src/types/: base32.js.d.ts
src/utils/: constants.ts  format.ts
(+77 files in other folders)
