[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "=21.5.0", default-features = false }

[profile.release]
panic = "abort"
strip = "debuginfo"
opt-level = "s"
codegen-units = 1
lto = "fat"

[profile.release.build-override]
opt-level = 0
